# WebsocketRustChat

./: Cargo.toml  LICENSE  README.md
assets/: 404.html  405.html  index.html  script.js
src/: main.rs  ws.rs
src/ws/: file_storage.rs  handler.rs  http_header.rs  http_request.rs  http_request_parser.rs  http_response.rs  http_router.rs  http_session.rs  method.rs  middleware.rs  static_file_handler.rs  ws_message.rs  ws_server.rs  ws_session.rs
