[package]
name = "WebsocketRustChat"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3.31"
tokio = { version = "1.42.0", features = ["full"] }
tungstenite = "0.24.0"
tokio-tungstenite = "0.24.0"
futures = "0.3.31"
serde_json = "1.0.134"
serde = { version = "1.0.134", features = ["derive"]}
